--- a/app/src/index.css
+++ b/app/src/index.css
@@ -22,10 +22,12 @@
 
 a {
   text-decoration: none;
+  /* color: #f7d354; */
   color: #f7d354;
   transition: 0.5s;
 }
 
 a:hover {
+  /* color: #b8930c; */
   color: #b8930c;
 }
