--- a/app/src/components/Navbar.css
+++ b/app/src/components/Navbar.css
@@ -25,8 +25,8 @@
 }
 
 #navbar form button {
-  background-color: #f7d354;
-  border: 2px solid #f7d354;
+  background-color: #54c1f7;
+  border: 2px solid #54c1f7;
   border-radius: 4px;
   color: #000;
   padding: 0.3rem;
@@ -34,4 +34,33 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 768px) {
+  #navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
+    margin: -3vw;
+  }
+
+  #navbar h2 a {
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    gap: 0.3rem;
+  }
+
+  #navbar input {
+    padding: 0.2rem 0.8rem;
+    border-radius: 4px;
+    width: 30vw;
+    border: none;
+  }
+
+  #navbar form button {
+    padding: 0.3rem;
+    font-size: 0.7rem;
+  }
 }
